# IE

Practica 1 EI/: CMakeLists.txt
Practica 1 EI/code/: Tokenizador.cpp  Tokenizador.h
Practica_1/: CMakeLists.txt
Practica_1/FicherosPruebaTokenizador/: Tokenizador.cpp  Tokenizador.h  acronimo01.cpp  tok_acentos_en01.cpp
Practica_1/code/: Tokenizador.cpp  Tokenizador.h  main.cpp  nombres.txt
Practica_1/code/lib/: Tokenizador.cpp
Practica_1/code/src/: main.cpp
Practica_2/: CMakeLists.txt
Practica_2/Tests/: prueba.cpp
Practica_2/code/include/: indexadorHash.h  indexadorInformacion.h  indexadorinformacion.h  infColeccionDocs.h  infDoc.h  infTermDoc.h  informacionPregunta.h  informacionTermino.h  informacionTerminoPregunta.h  stemmer.h  tokenizador.h
Practica_2/code/lib/: indexadorHash.cpp  indexadorInformacion.cpp  indexadorinformacion.cpp  infColeccionDocs.cpp  infDoc.cpp  infTermDoc.cpp  informacionPregunta.cpp  informacionTermino.cpp  informacionTerminoPregunta.cpp  stemmer.cpp  tokenizador.cpp
Practica_2/code/src/: main.cpp
Practica_3/: CMakeLists.txt
untitled/: CMakeLists.txt  main.cpp  tokenizador.cpp  tokenizador.h
untitled/include/: tokenizador.h
untitled/lib/: tokenizador.cpp
untitled/src/: main.cpp
